--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,79 +1,22 @@
 ---
 blocks:
-  - tagline: 'All-In-One, Best-In-Class'
-    headline: One Solution. Unlimited Results.
-    text: >-
-      Grow your practice while saving time & money with the DoctorLogic Practice
-      Growth Solution that is loved by thousands of Healthcare Providers.
-    image: /uploads/home-designs.png
-    btn_label: Schedule Demo
-    btn_link: /
-    _template: hero
   - items:
-      - title: Is your website a sitting duck?
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text. This is where you might talk about the feature, if this
-          wasn't just filler text. 
-        image: /uploads/icon-duck.svg
+      - title: Here's Another Feature
+        text: bob
+        image: ''
         image_alt: This is the image alt text.
-        btn_link: /
-        btn_label: Schedule Demo
-      - title: 1-up your competitors with ease.
-        text: >-
-          Creative copywriting is part of the implementation process. Our
-          content team is hard at work creating new, exciting, relevant content
-          for your new website. We look forward to pairing your new design with
-          content soon. Thank you for your patience.
-        image: /uploads/icon-1-up.svg
-        image_alt: This is the image alt text.
-        btn_link: /
-        btn_label: Learn More
-      - title: Tired of your current vendor's drama?
-        text: >-
-          Creative copywriting is part of the implementation process. Our
-          content team is hard at work creating new, exciting, relevant content
-          for your new website. We look forward to pairing your new design with
-          content soon. Thank you for your patience.
-        image: /uploads/icon-drama.svg
-        image_alt: This is the image alt text.
-        btn_link: /
-        btn_label: Make The Switch
-      - title: Keep your search rankings in check.
+      - title: Here's Another Feature
         text: >-
           This is where you might talk about the feature, if this wasn't just
           filler text.
-        image: /uploads/icon-check-mate.svg
+        image: ''
         image_alt: This is the image alt text.
-        btn_link: /
-        btn_label: Google-proof My Site
-    layout: '50'
-    _template: features
-  - template: img_top
-    custom: ''
-    tagline: Here's some text above the other text
-    headline: 'Stunning, modern designs.'
-    headline_class: blue_purple
-    text: >-
-      Customized, responsive and completely future proofed web designs built to
-      win new patients.
-    btn_label: View Now
-    btn_link: google.com
-    image: /uploads/hero-phones.png
-    _template: imageText50
-  - template: img_top
-    custom: inset
-    tagline: Grow your practice’s online presence.
-    headline: 'Loved by over 3,000 healthcare providers.'
-    headline_class: ''
-    text: >-
-      DoctorLogic offers the most advanced Website Marketing Platform built to
-      help increase new patients by using Before and After Photo Galleries,
-      Online Patient Reviews, and treatment pages to create up to 100x
-      Google-friendly content.
-    btn_label: Learn More
-    btn_link: google.com
-    image: /uploads/home-mb-gi.png
-    _template: imageText50
+      - title: Here's Another Feature
+        text: >-
+          This is where you might talk about the feature, if this wasn't just
+          filler text.
+        image: ''
+        image_alt: This is the image alt text.
+    _template: grid
 ---
 
