Improved Grid block

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,22 +1,29 @@
 ---
 blocks:
-  - items:
-      - title: Here's Another Feature
-        text: bob
-        image: ''
-        image_alt: This is the image alt text.
-      - title: Here's Another Feature
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
-        image: ''
-        image_alt: This is the image alt text.
-      - title: Here's Another Feature
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
-        image: ''
-        image_alt: This is the image alt text.
+  - groups:
+      - label: Group 1
+        items:
+          - title: Item 1.1
+            text: >-
+              This is where you might talk about the item, if this wasn't just
+              filler text.
+            image: ''
+            image_alt: This is the image alt text.
+          - title: Item 1.2
+            text: >-
+              This is where you might talk about the item, if this wasn't just
+              filler text.
+            image: ''
+            image_alt: This is the image alt text.
+      - label: Group 2
+        items:
+          - title: Item 2.1
+            text: >-
+              This is where you might talk about the item, if this wasn't just
+              filler text.
+            image: ''
+            image_alt: This is the image alt text.
+    layout: ''
     _template: grid
 ---
 
