--- a/content/home.mdx
+++ b/content/home.mdx
@@ -7,7 +7,7 @@ blocks:
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
-            image: ''
+            image: /uploads/vip.jpg
             image_alt: This is the image alt text.
           - title: Item 1.2
             text: >-
@@ -21,7 +21,7 @@ blocks:
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
-            image: ''
+            image: /uploads/Screen Shot 2022-09-09 at 3.59.59 PM.png
             image_alt: This is the image alt text.
     layout: ''
     _template: grid
