--- a/content/home.mdx
+++ b/content/home.mdx
@@ -3,17 +3,17 @@ blocks:
   - groups:
       - label: Group 1
         items:
-          - title: Item 1.1
+          - title: VIP Plastic Surgery
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
             image: /uploads/vip.jpg
             image_alt: This is the image alt text.
-          - title: Item 1.2
+          - title: Albright Plastic Surgery
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
-            image: ''
+            image: /uploads/albright.jpg
             image_alt: This is the image alt text.
       - label: Group 2
         items:
@@ -24,6 +24,8 @@ blocks:
             image: /uploads/Screen Shot 2022-09-09 at 3.59.59 PM.png
             image_alt: This is the image alt text.
     layout: ''
+    gallery:
+      - {}
     _template: grid
 ---
 
