Added features to grid groups

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -2,6 +2,9 @@
 blocks:
   - groups:
       - label: Group 1
+        features:
+          - Feature 1
+          - Feature 2
         items:
           - title: Item 1.1
             text: >-
