modal features updates

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -2,14 +2,14 @@
 blocks:
   - groups:
       - label: Group 1
-        features:
-          - Feature 1
-          - Feature 2
         items:
           - title: VIP Plastic Surgery
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
+            features:
+              - jim
+              - bob
             image: /uploads/vip.jpg
             image_alt: This is the image alt text.
           - title: Albright Plastic Surgery
@@ -27,8 +27,6 @@ blocks:
             image: /uploads/Screen Shot 2022-09-09 at 3.59.59 PM.png
             image_alt: This is the image alt text.
     layout: ''
-    gallery:
-      - {}
     _template: grid
 ---
 
