--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,15 +1,15 @@
 ---
 blocks:
   - groups:
-      - label: Group 1
+      - label: Modern
         items:
           - title: VIP Plastic Surgery
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
             features:
-              - jim
-              - bob
+              - Modern
+              - Large Padding
             image: /uploads/vip.jpg
             image_alt: This is the image alt text.
           - title: Albright Plastic Surgery
@@ -18,13 +18,16 @@ blocks:
               filler text.
             image: /uploads/albright.jpg
             image_alt: This is the image alt text.
-      - label: Group 2
+      - label: Traditional
         items:
           - title: Item 2.1
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
-            image: /uploads/Screen Shot 2022-09-09 at 3.59.59 PM.png
+            features:
+              - Professional Feel
+              - Symetrical Layout
+            image: /uploads/vance-thompson.jpg
             image_alt: This is the image alt text.
     layout: ''
     _template: grid
