--- a/content/home.mdx
+++ b/content/home.mdx
@@ -31,11 +31,11 @@ blocks:
             image_alt: This is the image alt text.
     layout: ''
     _template: grid
-  - tagline: Here's some text above the other text
-    headline: This Big Text is Totally Awesome
-    text: >-
+  - text: >-
       Phasellus scelerisque, libero eu finibus rutrum, risus risus accumsan
       libero, nec molestie urna dui a leo.
-    _template: spacingswitch
+    image: /uploads/cookie-monster-profile.jpg
+    alt_text: Me cookie monster.
+    _template: spacingSwitch
 ---
 
