--- a/content/home.mdx
+++ b/content/home.mdx
@@ -12,15 +12,19 @@ blocks:
               - Large Padding
             image: /uploads/vip.jpg
             image_alt: This is the image alt text.
+            btn_link: 'https://vipplasticsurgery.com'
+            btn_label: vipplasticsurgery.com
           - title: Albright Plastic Surgery
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
             image: /uploads/albright.jpg
             image_alt: This is the image alt text.
+            btn_link: 'https://albrightplasticsurgery.com'
+            btn_label: albrightplasticsurgery.com
       - label: Traditional
         items:
-          - title: Item 2.1
+          - title: Vance Thompson Vision
             text: >-
               This is where you might talk about the item, if this wasn't just
               filler text.
@@ -29,12 +33,14 @@ blocks:
               - Symetrical Layout
             image: /uploads/vance-thompson.jpg
             image_alt: This is the image alt text.
+            btn_link: 'https://vancethompsonvision.com'
+            btn_label: vancethompsonvision.com
     layout: ''
     _template: grid
   - text: >-
       Phasellus scelerisque, libero eu finibus rutrum, risus risus accumsan
       libero, nec molestie urna dui a leo.
-    image: /uploads/cookie-monster-profile.jpg
+    image: /uploads/canoe.jpg
     alt_text: Me cookie monster.
     _template: spacingSwitch
 ---
