--- a/content/home.mdx
+++ b/content/home.mdx
@@ -43,5 +43,8 @@ blocks:
     image: /uploads/canoe.jpg
     alt_text: Me cookie monster.
     _template: spacingSwitch
+  - image: /uploads/canoe.jpg
+    alt_text: test
+    _template: symmetrySwitch
 ---
 
