--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,5 +1,273 @@
 ---
 blocks:
+  - items:
+      - title: Wishlane Aesthetics
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/wishlaneaesthetics.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://wishlaneaesthetics.com/'
+        btn_label: View Site
+      - title: Secret Aesthetics
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/secretsaesthetics.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://secretsaesthetics.com/'
+        btn_label: View Site
+      - title: Prosperity Health
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/prosperityhealthllc.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://prosperityhealthllc.com/'
+        btn_label: View Site
+      - title: Good Day Psychiatry
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/gooddaypsychiatry.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://gooddaypsychiatry.com/'
+        btn_label: View Site
+      - title: Glowing Embers Health and Wellness
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/glowingembershw.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://glowingembershw.com/'
+        btn_label: View Site
+      - title: Dermagnify MD
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/dermagnifymd.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://dermagnifymd.com'
+        btn_label: View Site
+      - title: AION Wellness
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/aionwellness.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://aionwellness.com'
+        btn_label: View Site
+      - title: Omnia Medical
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/omniamedicalnyc.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://omniamedicalnyc.com/'
+        btn_label: View Site
+      - title: Lake Buena Vista Aesthetics
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/lakebuenavistaaesthetics.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://lakebuenavistaaesthetics.com/'
+        btn_label: View Site
+      - title: Dr. Rolando Morales
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+          - Dark
+        image: /uploads/drmorales-needs-tweaks.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://drmorales.com'
+        btn_label: View Site
+      - title: Ashville Regenerative Orthopedics
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+          - Dark
+        image: /uploads/avlregenerative.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://avlregenerative.com'
+        btn_label: View Site
+      - title: VIP Plastic Surgery
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+          - Large Padding
+        image: /uploads/vip.jpg
+        image_alt: This is the image alt text.
+        btn_link: 'https://vipplasticsurgery.com'
+        btn_label: View Site
+      - title: Albright Plastic Surgery
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/albright.jpg
+        image_alt: This is the image alt text.
+        btn_link: 'https://albrightplasticsurgery.com'
+        btn_label: View Site
+      - title: Watt Plastic Surgery
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/wattplasticsurgery.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://wattplasticsurgery.com/'
+        btn_label: View Site
+      - title: Hidden Oasis MedSpa
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/hiddenoasismedspasa.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://hiddenoasismedspasa.com/'
+        btn_label: View Site
+      - title: Health and Hormones
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/healthnhormones.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://healthnhormones.com/'
+        btn_label: View Site
+      - title: Desert Sage Dermatology
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/desertsagederm-mightneedtweaks.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://desertsagederm.com'
+        btn_label: View Site
+      - title: City of Oaks Dental
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/cityofoaksdental.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://cityofoaksdental.com/'
+        btn_label: View Site
+      - title: Well Spring Medical Aesthetics
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/wellspringmedicalaesthetics.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://wellspringmedicalaesthetics.com'
+        btn_label: View Site
+      - title: Bay Area Cosmetic Dermatology
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/weloveskin.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://weloveskin.com'
+        btn_label: View Site
+      - title: Nicolas Balyint Psychiatry
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/npbalyint.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://npbalyint.com/'
+        btn_label: View Site
+      - title: Lewis Pain and Physical Medicine
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/lewispain.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://lewispain.com/'
+        btn_label: View Site
+      - title: Divine IV and Wellness
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/divineiv.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://divineiv.com/'
+        btn_label: View Site
+      - title: Body & Beauty Lab
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+        image: /uploads/bodyandbeauty.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://bodyandbeauty.com/'
+        btn_label: View Site
+      - title: Ball Dentistry
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+          - Light
+        image: /uploads/balldentistry.png
+        image_alt: This is the image alt text.
+        btn_link: 'https://balldentistry.com'
+        btn_label: View Site
+      - title: Vance Thompson Vision
+        text: >-
+          This is where you might talk about the item, if this wasn't just
+          filler text.
+        features:
+          - Modern
+          - Professional Feel
+          - Symetrical Layout
+        image: /uploads/vance-thompson.jpg
+        image_alt: This is the image alt text.
+        btn_link: 'https://vancethompsonvision.com'
+        btn_label: View Site
+    _template: rotator
   - groups:
       - label: Modern
         items:
@@ -226,7 +494,6 @@ blocks:
             image_alt: This is the image alt text.
             btn_link: 'https://vancethompsonvision.com'
             btn_label: View Site
-    layout: ''
     _template: grid
   - text: >-
       Phasellus scelerisque, libero eu finibus rutrum, risus risus accumsan
@@ -238,6 +505,8 @@ blocks:
     alt_text: test
     _template: symmetrySwitch
 ---
+
+
 
 
 
