Multiple rotators in the block

--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,12 +1,18 @@
 ---
 blocks:
-  - items:
+  - rows:
+      - feature: Featured
+        label: Featured
+      - feature: Modern
+        label: Modern
+    items:
       - title: Wishlane Aesthetics
         text: >-
           This is where you might talk about the item, if this wasn't just
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/wishlaneaesthetics.png
         image_alt: This is the image alt text.
         btn_link: 'https://wishlaneaesthetics.com/'
@@ -17,6 +23,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/secretsaesthetics.png
         image_alt: This is the image alt text.
         btn_link: 'https://secretsaesthetics.com/'
@@ -27,6 +34,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/prosperityhealthllc.png
         image_alt: This is the image alt text.
         btn_link: 'https://prosperityhealthllc.com/'
@@ -37,6 +45,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/gooddaypsychiatry.png
         image_alt: This is the image alt text.
         btn_link: 'https://gooddaypsychiatry.com/'
@@ -47,6 +56,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/glowingembershw.png
         image_alt: This is the image alt text.
         btn_link: 'https://glowingembershw.com/'
@@ -57,6 +67,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Featured
         image: /uploads/dermagnifymd.png
         image_alt: This is the image alt text.
         btn_link: 'https://dermagnifymd.com'
@@ -505,6 +516,7 @@ blocks:
     alt_text: test
     _template: symmetrySwitch
 ---
+
 
 
 
