--- a/content/home.mdx
+++ b/content/home.mdx
@@ -1,6 +1,8 @@
 ---
 blocks:
   - rows:
+      - feature: Unique
+        label: Unique
       - feature: Featured
         label: Featured
       - feature: Modern
@@ -35,6 +37,7 @@ blocks:
         features:
           - Modern
           - Featured
+          - Unique
         image: /uploads/prosperityhealthllc.png
         image_alt: This is the image alt text.
         btn_link: 'https://prosperityhealthllc.com/'
@@ -46,6 +49,7 @@ blocks:
         features:
           - Modern
           - Featured
+          - Unique
         image: /uploads/gooddaypsychiatry.png
         image_alt: This is the image alt text.
         btn_link: 'https://gooddaypsychiatry.com/'
@@ -88,6 +92,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Unique
         image: /uploads/omniamedicalnyc.png
         image_alt: This is the image alt text.
         btn_link: 'https://omniamedicalnyc.com/'
@@ -109,6 +114,7 @@ blocks:
         features:
           - Modern
           - Dark
+          - Unique
         image: /uploads/drmorales-needs-tweaks.png
         image_alt: This is the image alt text.
         btn_link: 'https://drmorales.com'
@@ -141,6 +147,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Unique
         image: /uploads/albright.jpg
         image_alt: This is the image alt text.
         btn_link: 'https://albrightplasticsurgery.com'
@@ -151,6 +158,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Unique
         image: /uploads/wattplasticsurgery.png
         image_alt: This is the image alt text.
         btn_link: 'https://wattplasticsurgery.com/'
@@ -241,6 +249,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Unique
         image: /uploads/divineiv.png
         image_alt: This is the image alt text.
         btn_link: 'https://divineiv.com/'
@@ -251,6 +260,7 @@ blocks:
           filler text.
         features:
           - Modern
+          - Unique
         image: /uploads/bodyandbeauty.png
         image_alt: This is the image alt text.
         btn_link: 'https://bodyandbeauty.com/'
@@ -274,6 +284,7 @@ blocks:
           - Modern
           - Professional Feel
           - Symetrical Layout
+          - Unique
         image: /uploads/vance-thompson.jpg
         image_alt: This is the image alt text.
         btn_link: 'https://vancethompsonvision.com'
@@ -516,6 +527,11 @@ blocks:
     alt_text: test
     _template: symmetrySwitch
 ---
+
+
+
+
+
 
 
 
