fixes and styles

--- a/content/Layout_Principles.mdx
+++ b/content/Layout_Principles.mdx
@@ -1,10 +1,12 @@
 ---
 blocks:
-  - tagline: Here's some text above the other text
-    headline: This Big Text is Totally Awesome
-    text: >-
+  - image: /uploads/canoe.jpg
+    _template: symmetrySwitch
+  - text: >-
       Phasellus scelerisque, libero eu finibus rutrum, risus risus accumsan
       libero, nec molestie urna dui a leo.
-    _template: hero
+    image: /uploads/canoe.jpg
+    _template: spacingSwitch
 ---
+
 
