--- a/content/home.mdx
+++ b/content/home.mdx
@@ -3,6 +3,8 @@ blocks:
   - rows:
       - feature: Featured
         label: Featured
+      - feature: Plastic Surgery
+        label: Plastic Surgery
       - feature: Unique
         label: Unique
       - feature: Modern
@@ -15,6 +17,7 @@ blocks:
         features:
           - Modern
           - Featured
+          - Plastic Surgery
         image: /uploads/wishlaneaesthetics.png
         image_alt: This is the image alt text.
         btn_link: 'https://wishlaneaesthetics.com/'
@@ -291,6 +294,8 @@ blocks:
         btn_label: View Site
     _template: rotator
 ---
+
+
 
 
 
